--- a/src/renderer/src/assets/css/global.scss
+++ b/src/renderer/src/assets/css/global.scss
@@ -3,11 +3,14 @@ body {
   -webkit-app-region: drag;
 }
 
+input,
+textarea,
+button,
 .nodrag {
   -webkit-app-region: no-drag;
 }
 
 body {
-  @apply w-screen h-screen bg-gray-400;
+  @apply w-screen h-screen bg-gray-200;
   user-select: none;
 }
